--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,19 @@
             <artifactId>mockserver-netty</artifactId>
             <version>${mockserver-netty.version}</version>
         </dependency>
+        <!-- test FX -->
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.1-alpha</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>4.0.1-alpha</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
