--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>mockserver-netty</artifactId>
             <version>${mockserver-netty.version}</version>
         </dependency>
+        <!-- testng
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.6</version>
+            <scope>test</scope>
+        </dependency> -->
         <!-- test FX -->
         <dependency>
             <groupId>org.testfx</groupId>
