--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
     <artifactId>AutosuggestFXsampler</artifactId>
     <groupId>org.fxpart</groupId>
     <packaging>jar</packaging>
-    <version>0.44.7-SNAPSHOT</version>
-    <!--    <version>0.44.7</version>-->
+    <version>0.44.7</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId} - project</description>
 
