--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>AutosuggestFXsampler</artifactId>
     <groupId>org.fxpart</groupId>
     <packaging>jar</packaging>
-    <version>0.45.0</version>
+    <version>0.45.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId} - project</description>
 
