--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>AutosuggestFXsampler</artifactId>
     <groupId>org.fxpart</groupId>
     <packaging>jar</packaging>
-    <version>0.45.4</version>
+    <version>0.45.5-SNASHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId} - project</description>
 
@@ -16,7 +16,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <slf4j-api.version>1.7.12</slf4j-api.version>
         <logback-classic.version>1.1.3</logback-classic.version>
-        <mockserver-netty.version>3.9.16</mockserver-netty.version>
+<!--        <mockserver-netty.version>3.9.16</mockserver-netty.version>-->
+        <spring.version>4.2.0.RELEASE</spring.version>
     </properties>
 
     <distributionManagement>
@@ -49,12 +50,25 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
         </dependency>
-        <!-- mock framework.rest server -->
+        <!-- mock framework.rest server
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
             <version>${mockserver-netty.version}</version>
+        </dependency> -->
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
         <!-- test FX -->
         <dependency>
             <groupId>org.testfx</groupId>
